--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Tricount"
         tools:targetApi="31">
         <activity
+            android:name=".TricountDetail"
+            android:exported="false"
+            android:theme="@style/Theme.Tricount" />
+        <activity
+            android:name=".addDepense"
+            android:exported="false" />
+        <activity
             android:name=".addTricount"
             android:exported="false" />
         <activity
