--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.Tricount"
         tools:targetApi="31">
         <activity
-            android:name=".TricountDetail"
+            android:name=".AddMemberActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ChoixMembreActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MembreActivity"
+            android:exported="false" />
+        <activity
+            android:name=".TricountDetailsActivity"
             android:exported="false"
             android:theme="@style/Theme.Tricount" />
         <activity
